src/parser/generated/RestAPIParser.py
# Generated from apiary/parser/grammar/RestAPIParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RestAPIParser ( Parser ):

    grammarFileName = "RestAPIParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'api'", "'model'", "'endpoint'", "'table'", 
                     "'using'", "'version'", "'at'", "'default'", "'description'", 
                     "'GET'", "'POST'", "'PUT'", "'PATCH'", "'DELETE'", 
                     "'sqlite'", "'postgres'", "'str'", "'int'", "'float'", 
                     "'bool'", "'datetime'", "'required'", "'unique'", "'indexed'", 
                     "<INVALID>", "'null'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "'['", "']'", "':'", "'->'", "','" ]

    symbolicNames = [ "<INVALID>", "API", "MODEL", "ENDPOINT", "TABLE", 
                      "USING", "VERSION", "AT", "DEFAULT", "DESCRIPTION", 
                      "GET", "POST", "PUT", "PATCH", "DELETE", "SQLITE", 
                      "POSTGRES", "STR", "INT", "FLOAT", "BOOL", "DATETIME", 
                      "REQUIRED", "UNIQUE", "INDEXED", "BOOLEAN", "NULL", 
                      "NUMBER", "STRING", "IDENTIFIER", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "COLON", "ARROW", "COMMA", 
                      "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_api_specification = 0
    RULE_api_declaration = 1
    RULE_database_type = 2
    RULE_model_declaration = 3
    RULE_field_declaration = 4
    RULE_type_spec = 5
    RULE_field_modifier = 6
    RULE_value = 7
    RULE_endpoint_declaration = 8
    RULE_http_method = 9

    ruleNames =  [ "api_specification", "api_declaration", "database_type", 
                   "model_declaration", "field_declaration", "type_spec", 
                   "field_modifier", "value", "endpoint_declaration", "http_method" ]

    EOF = Token.EOF
    API=1
    MODEL=2
    ENDPOINT=3
    TABLE=4
    USING=5
    VERSION=6
    AT=7
    DEFAULT=8
    DESCRIPTION=9
    GET=10
    POST=11
    PUT=12
    PATCH=13
    DELETE=14
    SQLITE=15
    POSTGRES=16
    STR=17
    INT=18
    FLOAT=19
    BOOL=20
    DATETIME=21
    REQUIRED=22
    UNIQUE=23
    INDEXED=24
    BOOLEAN=25
    NULL=26
    NUMBER=27
    STRING=28
    IDENTIFIER=29
    LBRACE=30
    RBRACE=31
    LBRACKET=32
    RBRACKET=33
    COLON=34
    ARROW=35
    COMMA=36
    WS=37
    COMMENT=38
    BLOCK_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Api_specificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def api_declaration(self):
            return self.getTypedRuleContext(RestAPIParser.Api_declarationContext,0)


        def EOF(self):
            return self.getToken(RestAPIParser.EOF, 0)

        def model_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RestAPIParser.Model_declarationContext)
            else:
                return self.getTypedRuleContext(RestAPIParser.Model_declarationContext,i)


        def endpoint_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RestAPIParser.Endpoint_declarationContext)
            else:
                return self.getTypedRuleContext(RestAPIParser.Endpoint_declarationContext,i)


        def getRuleIndex(self):
            return RestAPIParser.RULE_api_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApi_specification" ):
                listener.enterApi_specification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApi_specification" ):
                listener.exitApi_specification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApi_specification" ):
                return visitor.visitApi_specification(self)
            else:
                return visitor.visitChildren(self)




    def api_specification(self):

        localctx = RestAPIParser.Api_specificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_api_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.api_declaration()
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 21
                self.model_declaration()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 27
                self.endpoint_declaration()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(RestAPIParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Api_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def API(self):
            return self.getToken(RestAPIParser.API, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(RestAPIParser.STRING)
            else:
                return self.getToken(RestAPIParser.STRING, i)

        def VERSION(self):
            return self.getToken(RestAPIParser.VERSION, 0)

        def AT(self):
            return self.getToken(RestAPIParser.AT, 0)

        def USING(self):
            return self.getToken(RestAPIParser.USING, 0)

        def database_type(self):
            return self.getTypedRuleContext(RestAPIParser.Database_typeContext,0)


        def getRuleIndex(self):
            return RestAPIParser.RULE_api_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApi_declaration" ):
                listener.enterApi_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApi_declaration" ):
                listener.exitApi_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApi_declaration" ):
                return visitor.visitApi_declaration(self)
            else:
                return visitor.visitChildren(self)




    def api_declaration(self):

        localctx = RestAPIParser.Api_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_api_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(RestAPIParser.API)
            self.state = 36
            self.match(RestAPIParser.STRING)
            self.state = 37
            self.match(RestAPIParser.VERSION)
            self.state = 38
            self.match(RestAPIParser.STRING)
            self.state = 39
            self.match(RestAPIParser.AT)
            self.state = 40
            self.match(RestAPIParser.STRING)
            self.state = 41
            self.match(RestAPIParser.USING)
            self.state = 42
            self.database_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Database_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQLITE(self):
            return self.getToken(RestAPIParser.SQLITE, 0)

        def POSTGRES(self):
            return self.getToken(RestAPIParser.POSTGRES, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_database_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase_type" ):
                listener.enterDatabase_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase_type" ):
                listener.exitDatabase_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDatabase_type" ):
                return visitor.visitDatabase_type(self)
            else:
                return visitor.visitChildren(self)




    def database_type(self):

        localctx = RestAPIParser.Database_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_database_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            _la = self._input.LA(1)
            if not(_la==15 or _la==16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Model_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(RestAPIParser.MODEL, 0)

        def IDENTIFIER(self):
            return self.getToken(RestAPIParser.IDENTIFIER, 0)

        def TABLE(self):
            return self.getToken(RestAPIParser.TABLE, 0)

        def STRING(self):
            return self.getToken(RestAPIParser.STRING, 0)

        def LBRACE(self):
            return self.getToken(RestAPIParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RestAPIParser.RBRACE, 0)

        def field_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RestAPIParser.Field_declarationContext)
            else:
                return self.getTypedRuleContext(RestAPIParser.Field_declarationContext,i)


        def getRuleIndex(self):
            return RestAPIParser.RULE_model_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel_declaration" ):
                listener.enterModel_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel_declaration" ):
                listener.exitModel_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel_declaration" ):
                return visitor.visitModel_declaration(self)
            else:
                return visitor.visitChildren(self)




    def model_declaration(self):

        localctx = RestAPIParser.Model_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_model_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(RestAPIParser.MODEL)
            self.state = 47
            self.match(RestAPIParser.IDENTIFIER)
            self.state = 48
            self.match(RestAPIParser.TABLE)
            self.state = 49
            self.match(RestAPIParser.STRING)
            self.state = 50
            self.match(RestAPIParser.LBRACE)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 51
                self.field_declaration()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(RestAPIParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RestAPIParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(RestAPIParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(RestAPIParser.Type_specContext,0)


        def field_modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RestAPIParser.Field_modifierContext)
            else:
                return self.getTypedRuleContext(RestAPIParser.Field_modifierContext,i)


        def DEFAULT(self):
            return self.getToken(RestAPIParser.DEFAULT, 0)

        def value(self):
            return self.getTypedRuleContext(RestAPIParser.ValueContext,0)


        def getRuleIndex(self):
            return RestAPIParser.RULE_field_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declaration" ):
                listener.enterField_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declaration" ):
                listener.exitField_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_declaration" ):
                return visitor.visitField_declaration(self)
            else:
                return visitor.visitChildren(self)




    def field_declaration(self):

        localctx = RestAPIParser.Field_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_field_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(RestAPIParser.IDENTIFIER)
            self.state = 60
            self.match(RestAPIParser.COLON)
            self.state = 61
            self.type_spec()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                self.state = 62
                self.field_modifier()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 68
                self.match(RestAPIParser.DEFAULT)
                self.state = 69
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(RestAPIParser.STR, 0)

        def INT(self):
            return self.getToken(RestAPIParser.INT, 0)

        def FLOAT(self):
            return self.getToken(RestAPIParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(RestAPIParser.BOOL, 0)

        def DATETIME(self):
            return self.getToken(RestAPIParser.DATETIME, 0)

        def IDENTIFIER(self):
            return self.getToken(RestAPIParser.IDENTIFIER, 0)

        def LBRACKET(self):
            return self.getToken(RestAPIParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(RestAPIParser.RBRACKET, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_spec" ):
                listener.enterType_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_spec" ):
                listener.exitType_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = RestAPIParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_spec)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(RestAPIParser.STR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(RestAPIParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(RestAPIParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.match(RestAPIParser.BOOL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(RestAPIParser.DATETIME)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.match(RestAPIParser.IDENTIFIER)
                self.state = 78
                self.match(RestAPIParser.LBRACKET)
                self.state = 79
                self.match(RestAPIParser.RBRACKET)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.match(RestAPIParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_modifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRED(self):
            return self.getToken(RestAPIParser.REQUIRED, 0)

        def UNIQUE(self):
            return self.getToken(RestAPIParser.UNIQUE, 0)

        def INDEXED(self):
            return self.getToken(RestAPIParser.INDEXED, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_field_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_modifier" ):
                listener.enterField_modifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_modifier" ):
                listener.exitField_modifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_modifier" ):
                return visitor.visitField_modifier(self)
            else:
                return visitor.visitChildren(self)




    def field_modifier(self):

        localctx = RestAPIParser.Field_modifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_field_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(RestAPIParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(RestAPIParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(RestAPIParser.BOOLEAN, 0)

        def NULL(self):
            return self.getToken(RestAPIParser.NULL, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = RestAPIParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Endpoint_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDPOINT(self):
            return self.getToken(RestAPIParser.ENDPOINT, 0)

        def http_method(self):
            return self.getTypedRuleContext(RestAPIParser.Http_methodContext,0)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(RestAPIParser.STRING)
            else:
                return self.getToken(RestAPIParser.STRING, i)

        def ARROW(self):
            return self.getToken(RestAPIParser.ARROW, 0)

        def type_spec(self):
            return self.getTypedRuleContext(RestAPIParser.Type_specContext,0)


        def DESCRIPTION(self):
            return self.getToken(RestAPIParser.DESCRIPTION, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_endpoint_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndpoint_declaration" ):
                listener.enterEndpoint_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndpoint_declaration" ):
                listener.exitEndpoint_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndpoint_declaration" ):
                return visitor.visitEndpoint_declaration(self)
            else:
                return visitor.visitChildren(self)




    def endpoint_declaration(self):

        localctx = RestAPIParser.Endpoint_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_endpoint_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(RestAPIParser.ENDPOINT)
            self.state = 88
            self.http_method()
            self.state = 89
            self.match(RestAPIParser.STRING)
            self.state = 90
            self.match(RestAPIParser.ARROW)
            self.state = 91
            self.type_spec()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 92
                self.match(RestAPIParser.DESCRIPTION)
                self.state = 93
                self.match(RestAPIParser.STRING)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Http_methodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GET(self):
            return self.getToken(RestAPIParser.GET, 0)

        def POST(self):
            return self.getToken(RestAPIParser.POST, 0)

        def PUT(self):
            return self.getToken(RestAPIParser.PUT, 0)

        def PATCH(self):
            return self.getToken(RestAPIParser.PATCH, 0)

        def DELETE(self):
            return self.getToken(RestAPIParser.DELETE, 0)

        def getRuleIndex(self):
            return RestAPIParser.RULE_http_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHttp_method" ):
                listener.enterHttp_method(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHttp_method" ):
                listener.exitHttp_method(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHttp_method" ):
                return visitor.visitHttp_method(self)
            else:
                return visitor.visitChildren(self)




    def http_method(self):

        localctx = RestAPIParser.Http_methodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_http_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





